[gd_scene load_steps=2 format=3 uid="uid://c0ggnirw3uxvu"]

[ext_resource type="Script" uid="uid://cub87nud21wxa" path="res://cenas/interface/menu_prin.gd" id="1_s5f8p"]

[node name="MenuPrin" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s5f8p")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 250.0
theme_override_font_sizes/font_size = 100
text = "HeartBeatz!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_top = 360.0
offset_right = 1280.0
offset_bottom = 720.0

[node name="BotoesPrin" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="jogar" type="Button" parent="CenterContainer/BotoesPrin"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 25
text = "Jogar"

[node name="config" type="Button" parent="CenterContainer/BotoesPrin"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Configurações"

[node name="creditos" type="Button" parent="CenterContainer/BotoesPrin"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Créditos"

[node name="sair" type="Button" parent="CenterContainer/BotoesPrin"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Sair"

[node name="MenuConfig" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="voltar" type="Button" parent="CenterContainer/MenuConfig"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "Voltar"

[node name="telaCheia" type="CheckBox" parent="CenterContainer/MenuConfig"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Tela cheia"

[node name="sliderVolMaster" type="HSlider" parent="CenterContainer/MenuConfig"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="CenterContainer/MenuConfig/sliderVolMaster"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 0
offset_top = -10.0
offset_right = 180.0
offset_bottom = 30.0
theme_override_font_sizes/font_size = 25
text = "Volume Master"
horizontal_alignment = 1

[node name="sliderVolMusica" type="HSlider" parent="CenterContainer/MenuConfig"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="CenterContainer/MenuConfig/sliderVolMusica"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 0
offset_top = -10.0
offset_right = 180.0
offset_bottom = 30.0
theme_override_font_sizes/font_size = 25
text = "Volume Música"
horizontal_alignment = 1

[node name="sliderVolRuido" type="HSlider" parent="CenterContainer/MenuConfig"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="CenterContainer/MenuConfig/sliderVolRuido"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 0
offset_top = -10.0
offset_right = 180.0
offset_bottom = 30.0
theme_override_font_sizes/font_size = 25
text = "Volume Ruído"
horizontal_alignment = 1

[node name="MenuCreditos" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/MenuCreditos"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "Um jogo feito por nós!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="voltar" type="Button" parent="CenterContainer/MenuCreditos"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "Voltar"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -4096
layout_mode = 0
offset_right = 1287.0
offset_bottom = 725.0
mouse_filter = 2
color = Color(0.305882, 0, 0.607843, 1)

[connection signal="pressed" from="CenterContainer/BotoesPrin/jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="CenterContainer/BotoesPrin/config" to="." method="_on_config_pressed"]
[connection signal="pressed" from="CenterContainer/BotoesPrin/creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="CenterContainer/BotoesPrin/sair" to="." method="_on_sair_pressed"]
[connection signal="pressed" from="CenterContainer/MenuConfig/voltar" to="." method="_on_voltar_pressed"]
[connection signal="toggled" from="CenterContainer/MenuConfig/telaCheia" to="." method="_on_tela_cheia_toggled"]
[connection signal="value_changed" from="CenterContainer/MenuConfig/sliderVolMaster" to="." method="_on_slider_vol_master_value_changed"]
[connection signal="value_changed" from="CenterContainer/MenuConfig/sliderVolMusica" to="." method="_on_slider_vol_musica_value_changed"]
[connection signal="value_changed" from="CenterContainer/MenuConfig/sliderVolRuido" to="." method="_on_slider_vol_ruido_value_changed"]
[connection signal="pressed" from="CenterContainer/MenuCreditos/voltar" to="." method="_on_voltar_pressed"]
